[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/UI/menu_pausa/continuar_hover_ui.png" type="Texture" id=1]
[ext_resource path="res://Assets/UI/menu_pausa/menu_pausa.png" type="Texture" id=2]
[ext_resource path="res://Assets/UI/menu_pausa/continuar_ui.png" type="Texture" id=3]
[ext_resource path="res://Assets/UI/menu_pausa/salir_ui.png" type="Texture" id=4]
[ext_resource path="res://Assets/UI/menu_pausa/salir_hover_ui.png" type="Texture" id=5]
[ext_resource path="res://Scripts/MenuPausa.gd" type="Script" id=6]

[node name="MenuPausa" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pausa_ui" type="TextureRect" parent="."]
margin_left = 244.0
margin_top = 80.0
margin_right = 788.0
margin_bottom = 377.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menu_pausa_ui" type="VBoxContainer" parent="."]
pause_mode = 2
margin_left = 460.0
margin_top = 384.0
margin_right = 560.0
margin_bottom = 500.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="boton_continuar" type="TextureButton" parent="menu_pausa_ui"]
margin_right = 100.0
margin_bottom = 56.0
focus_neighbour_top = NodePath("../boton_salir")
focus_neighbour_bottom = NodePath("../boton_salir")
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 1 )

[node name="boton_salir" type="TextureButton" parent="menu_pausa_ui"]
margin_top = 60.0
margin_right = 100.0
margin_bottom = 116.0
focus_neighbour_top = NodePath("../boton_continuar")
focus_neighbour_bottom = NodePath("../boton_continuar")
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 5 )
[connection signal="pressed" from="menu_pausa_ui/boton_continuar" to="." method="_on_boton_continuar_pressed"]
[connection signal="pressed" from="menu_pausa_ui/boton_salir" to="." method="_on_boton_salir_pressed"]
